[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "readfcs"
authors = [{name = "Lamin Labs", email = "laminlabs@gmail.com"}]
readme = "README.md"
dynamic = ["version", "description"]
dependencies = [
    "nbproject",
    "flowio",
    "anndata",
]

[project.urls]
Home = "https://github.com/laminlabs/readfcs"

[project.optional-dependencies]
dev = [
    "pre-commit",
    "nox",
]
test = [
    "pytest>=6.0",
    "nbmake",
]

[tool.black]
preview = true

[tool.pytest.ini_options]
testpaths = [
    "tests",
    "docs/guides",
]
